SCRUM-261 fix: change z-index of language select

--- a/src/shared/ui/LangSelect/styles.module.scss
+++ b/src/shared/ui/LangSelect/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-  z-index: 999;
+  z-index: 3;
 
   display: flex;
   flex-direction: column;
